@@ -5,3 +5,4 @@ suggesting various improvements or submitting actual code. Here is a list
 of these people. Help us keep it complete and exempt of errors.
 
 Matthew Burgess		<matthew@linuxfromscratch.org>
+Tanaka Akira 		<akr@fsij.org>
